Add Stage B1 Arrow IPC handoff with dual CRuby/JRuby writers.
Path-only ingest over NewBridge keeps analytics on R Table proxies without claiming shared-heap zero-copy.

Co-authored-by: Cursor <cursoragent@cursor.com>